2004-08-13 Chris Wiebe

	add namespace to class wizard.
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/*

2004-08-12 Chris Wiebe

	Initial draft of new class wizard.
	* src/org/eclipse/cdt/ui/wizards/NewClassCreationWizard.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/*

2004-08-12 Chris Wiebe

	* src/org/eclipse/cdt/internal/ui/wizards/dialogsfields/ListDialogField.java
	* src/org/eclipse/cdt/internal/ui/wizards/dialogsfields/CheckedListDialogField.java

	change constructor to accept IBaseLabelProvider so TableViewer can use ITableLabelProvider
	fix bug in CheckedListDialogField.SetChecked() (never worked!)

2004-08-12 Alain Magloire

	Fix for PR 71667.
	Changes to the CCompletionContributor to pass
	a context.

	* src/org/eclipse/cdt/internal/ui/CCompletionContributorManager.java
	* src/org/eclipse/cdt/internal/ui/editor/AddIncludeOnSlectionAction.java
	* src/org/eclipse/cdt/internal/ui/text/CCompletionContributorDescriptor.java
	* src/org/eclipse/cdt/internal/ui/text/hover/CDocHover.java
	* src/org/eclipse/cdt/internal/ui/t4xt/CCompletionProcessor.java
	* src/org/eclipse/cdt/ui/ICCompletionContributor.java
	* src/org/eclipse/cdt/ui/text/ICCompletionInvocationContext.java
	* plugin.xml

2004-08-11 Alain Magloire

	Duplication in the CView.
	* src/org/eclipse/cdt/internal/ui/BaseCElementContentProvider.java
	* src/org/eclipse/cdt/internal/ui/cview/CViewContentProvider.java

2004-08-10 Alain Magloire

	* src/org/eclipse/cdt/internal/ui/editor/AddIncludeOnSelectionAction.java

2004-08-06 Chris Wiebe

	Add scheduling rule to WorkbenchRunnableAdapter
	* src/org/eclipse/cdt/internal/ui/actions/WorkbenchRunnableAdapter.java

2004-08-06 Chris Wiebe

	Added new element wizard classes.
	* src/org/eclipse/cdt/internal/ui/wizards/NewElementWizard.java
	* src/org/eclipse/cdt/internal/ui/wizards/NewElementWizardPage.java
	
2004-08-04 Alain Magloire

	Provide filters for the Outliner.

	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinePage.java